--- a/TODOs/TODO
+++ b/TODOs/TODO
@@ -1,9 +1,9 @@
 Home work 3:
 	✔ Создай репозиторий goit-markup-hw-03. @done(23-02-01 05:10)
 	✔ Склонируй созданный репозиторий и скопируй в него файлы предыдущей работы. @done(23-02-01 05:10)
-	☐ Добавь стили для геометрии (ширины, отступы, поля и рамки) и позиционирование контента при помощи Flexbox для страниц макета домашнего задания #3.
-	☐ Настрой GitHub Pages и добавь ссылку на живую страницу в шапку GitHub-репозитория.
-	☐ Критерии приёма работы наставником
+	✔ Добавь стили для геометрии (ширины, отступы, поля и рамки) и позиционирование контента при помощи Flexbox для страниц макета домашнего задания #3. @done(23-02-05 10:19)
+	✔ Настрой GitHub Pages и добавь ссылку на живую страницу в шапку GitHub-репозитория. @done(23-02-05 10:19)
+	✔ Критерии приёма работы наставником @done(23-02-05 10:19)
 	
 Проект:
 	✔ «A1» В корне проекта есть папка images с изображениями. @done(23-02-01 05:11)
@@ -15,21 +15,21 @@ Home work 3:
 	✔ «A7» Код написан следуя руководству. @done(23-02-01 05:12)
 		
 Оформление:
-	☐ «B1» Допускается глобальный сброс стилей по селектору тега для элементов <h1>...<h6>, <p> и <ul>.
-	☐ «B2» У элементов нет внешних отступов (свойство margin) «пробивающих» родительский элемент.
-	☐ «B3» В однострочных коллекциях элементов очищен крайний левый или правый margin элементов (если он есть).
-	☐ «B4» Для отступов между двумя соседними элементами используется свойство margin.
-	☐ «B5» Для зазора между границей родителя и его ребёнком используется свойство padding.
-	☐ «B6» Размеры внешних отступов (свойство margin) и внутренних полей (свойство padding) элементов заданы точно по макету.
-	☐ «B7» Создан общий вспомогательный класс .container для центрирования и ограничения контента по ширине.
-	☐ «B8» Ширина «контейнера» соответствует макету и равна 1158px.
-	☐ «B9» «Контейнер» оборачивает контент хедера, футера и секций. То есть находится внутри них.
-	☐ «B10» Для расположения элементов используется Flexbox, но только там, где это необходимо. Например в шапке, навигации, списках в секциях и так далее, то есть там, где расположить элементы горизонтально по другому невозможно.
-	☐ «B11» Финальные размеры блоков в браузере соответствуют макету.
-	☐ «B12» У элементов нет фиксированной высоты, она определяется их контентом.
-	☐ «B13» У хедера есть нижняя рамка, необходимо сильно приблизить макет чтобы увидеть её.
-	☐ «B14» Секции расположены друг под другом как стопка книг, без внешних отступов.
-	☐ «B15» Для всех секций используется один класс .section, заданы верхние и нижние падинги по 120px, отодвигающие контент внутрь секции.
-	☐ «B16» Для построения сеток используется техника описанная в конспекте и видео-мастерской.
-	☐ «B17» В карточках на странице Портфолио есть рамка (свойство border), но только в нижней части карточки.
+	✔ «B1» Допускается глобальный сброс стилей по селектору тега для элементов <h1>...<h6>, <p> и <ul>. @done(23-02-05 10:19)
+	✔ «B2» У элементов нет внешних отступов (свойство margin) «пробивающих» родительский элемент. @done(23-02-05 10:19)
+	✔ «B3» В однострочных коллекциях элементов очищен крайний левый или правый margin элементов (если он есть). @done(23-02-05 10:20)
+	✔ «B4» Для отступов между двумя соседними элементами используется свойство margin. @done(23-02-05 10:20)
+	✔ «B5» Для зазора между границей родителя и его ребёнком используется свойство padding. @done(23-02-05 10:20)
+	✔ «B6» Размеры внешних отступов (свойство margin) и внутренних полей (свойство padding) элементов заданы точно по макету. @done(23-02-05 10:20)
+	✔ «B7» Создан общий вспомогательный класс .container для центрирования и ограничения контента по ширине. @done(23-02-05 10:20)
+	✔ «B8» Ширина «контейнера» соответствует макету и равна 1158px. @done(23-02-05 10:20)
+	✔ «B9» «Контейнер» оборачивает контент хедера, футера и секций. То есть находится внутри них. @done(23-02-05 10:20)
+	✔ «B10» Для расположения элементов используется Flexbox, но только там, где это необходимо. Например в шапке, навигации, списках в секциях и так далее, то есть там, где расположить элементы горизонтально по другому невозможно. @done(23-02-05 10:21)
+	✔ «B11» Финальные размеры блоков в браузере соответствуют макету. @done(23-02-05 10:21)
+	✔ «B12» У элементов нет фиксированной высоты, она определяется их контентом. @done(23-02-05 10:21)
+	✔ «B13» У хедера есть нижняя рамка, необходимо сильно приблизить макет чтобы увидеть её. @done(23-02-05 10:21)
+	✔ «B14» Секции расположены друг под другом как стопка книг, без внешних отступов. @done(23-02-05 10:21)
+	✔ «B15» Для всех секций используется один класс .section, заданы верхние и нижние падинги по 120px, отодвигающие контент внутрь секции. @done(23-02-05 10:21)
+	✔ «B16» Для построения сеток используется техника описанная в конспекте и видео-мастерской. @done(23-02-05 10:21)
+	✔ «B17» В карточках на странице Портфолио есть рамка (свойство border), но только в нижней части карточки. @done(23-02-05 10:21)
 		
